[gd_scene load_steps=2 format=3 uid="uid://bof3pwo3a0gak"]

[ext_resource type="Script" path="res://2d/shared/position_indicator/position_indicator.gd" id="1_kya17"]

[node name="PositionIndicator" type="Node2D"]
script = ExtResource("1_kya17")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="LocalPosLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "1.0"

[node name="GlobalPosLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "1.0"

[node name="RotationLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "1.0"

[node name="ScaleLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "1.0"

[node name="SkewLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "1.0"
